testsuite/tests/ghc-regress/parser/should_fail/read028.hs
module ShouldFail where

-- !!! do must end in an expression
main = do x <- return ()
